[package]

name = "polaris"
version = "0.0.1"
authors = ["Jason Brown <jasedbrown@gmail.com>"]

[[bin]]
name = "polaris"

[dependencies.log]
path = "../rust-log"
#git = "https://github.com/rust-lang/log.git"

[dependencies.regex]
path = "../rust-regex"

[dependencies.time]
path = "../rust-time"
#git = "https://github.com/rust-lang/time.git"
