[package]

name = "polaris"
version = "0.0.1"
authors = ["Jason Brown <jasedbrown@gmail.com>"]

[[bin]]
name = "polaris"

[dependencies.log]
#path = "../rust/rust-log"
git = "https://github.com/rust-lang/log.git"

[dependencies.time]
#path = "../rust/rust-time"
git = "https://github.com/rust-lang/time.git"
